Upgrade material list and toolbar

--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -1,4 +1,4 @@
-<md-toolbar class="topnav">
+<mat-toolbar class="topnav">
   <button md-icon-button (click)="toggleSidenav()" id="menu-toggler">
     <img src="/assets/images/ic_sort.svg">
   </button>
@@ -77,4 +77,4 @@
       <div class="topnav__items--collapsed__menu__button" (click)="logout()"> <span>{{'TOPNAV_MOBILE_SIGNOUT' | translate}}</span> </div>
     </div>
   </div>
-</md-toolbar>
+</mat-toolbar>
