--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -63,7 +63,7 @@ $border-color: rgba(0, 0, 0, 0.2);
       }
     }
 
-    md-nav-list {
+    mat-nav-list {
       display: flex;
       flex-flow: column;
       padding: 15px 25px;
