--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -8,7 +8,7 @@
     <mat-tab>
       <div class="search__layout" [class.search__layout--customer-service]="authService.isActiveAclCustomerService()">
         <div class="search__sidenav">
-          <md-nav-list>
+          <mat-nav-list>
             <div class="search__sidenav__query__container">
               <mat-input-container>
                 <input matInput (focus)="showAutoComplete()" [value]="queryString" (input)="quickSearchInputChanged($event)" (keydown)="quickSearchKeyDown($event)" (blur)="hideAutoComplete()">
@@ -52,7 +52,7 @@
             </div>
 
             <div class="search__sidenav__reset" (click)="resetSearch(advancedSearch)">{{'SEARCH_RESET' | translate}}</div>
-          </md-nav-list>
+          </mat-nav-list>
         </div>
 
         <div class="search__content">
