--- a/src/app/pages/email-templates-page/email-template-view/token-list/token-list.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/token-list/token-list.component.scss
@@ -17,7 +17,7 @@ token-view {
       color: rgba(0, 0, 0, 0.5);
     }
 
-    md-input-container {
+    mat-input-container {
       width: 150px;
       font-size: 14px;
     }
