--- a/src/app/pages/products-page/product-view/product-images/product-images.component.scss
+++ b/src/app/pages/products-page/product-view/product-images/product-images.component.scss
@@ -67,7 +67,7 @@
   margin: 0 15px 0 35px;
   width: 280px;
 
-  md-input-container {
+  mat-input-container {
     font-size: 14px;
     width: 95%;
   }
