--- a/src/assets/scss/_mat-rewrites.scss
+++ b/src/assets/scss/_mat-rewrites.scss
@@ -18,7 +18,7 @@
     border-radius: 3px;
     margin-right: 16px;
 
-    md-input-container {
+    mat-input-container {
       margin-left: 10px;
       font-size: 14px;
     }
