--- a/src/assets/scss/_registration.scss
+++ b/src/assets/scss/_registration.scss
@@ -74,7 +74,7 @@
     font-size: 12px;
     width: 255px;
 
-    md-input-container {
+    mat-input-container {
       width: 100%;
 
       label {
