--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -185,7 +185,7 @@ $border-color: rgba(0, 0, 0, 0.2);
       }
     }
 
-    md-checkbox > .md-checkbox-layout > .md-checkbox-inner-container {
+    mat-checkbox > .mat-checkbox-layout > .mat-checkbox-inner-container {
       height: 16px;
       width: 16px;
     }
