--- a/src/app/pages/email-templates-page/email-template-view/shared-list/shared-list.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/shared-list/shared-list.component.scss
@@ -13,7 +13,7 @@
       color: rgba(0, 0, 0, 0.5);
     }
 
-    md-input-container {
+    mat-input-container {
       width: 150px;
       font-size: 14px;
     }
