--- a/src/app/pages/event-hooks-page/event-hook-view/shared-hooks-list/shared-hooks-list.component.scss
+++ b/src/app/pages/event-hooks-page/event-hook-view/shared-hooks-list/shared-hooks-list.component.scss
@@ -13,7 +13,7 @@
       color: rgba(0, 0, 0, 0.5);
     }
 
-    md-input-container {
+    mat-input-container {
       width: 80px;
       font-size: 14px;
     }
