--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.scss
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.scss
@@ -8,11 +8,11 @@
       padding-bottom: 4px;
     }
 
-    md-checkbox {
+    mat-checkbox {
       width: 50%;
     }
 
-    md-input-container {
+    mat-input-container {
       margin-right: 25px;
     }
   }
