--- a/src/app/shared/components/add-schedule/add-schedule.component.scss
+++ b/src/app/shared/components/add-schedule/add-schedule.component.scss
@@ -3,7 +3,7 @@
   &__container {
     font-size: 14px;
 
-    md-input-container {
+    mat-input-container {
       width: 220px;
       margin-right: 20px;
     }
@@ -14,12 +14,12 @@
     }
   }
 
-  md-input-container {
+  mat-input-container {
     font-size: 14px;
   }
 
   &__details {
-    md-input-container {
+    mat-input-container {
       font-size: 14px;
     }
 
