--- a/src/app/shared/components/search-input/search-input.component.scss
+++ b/src/app/shared/components/search-input/search-input.component.scss
@@ -8,7 +8,7 @@
   transition: width 250ms ease-in-out;
 }
 
-md-input-container {
+mat-input-container {
   width: 0;
   transition: width 250ms ease-in-out;
 }
