--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -82,7 +82,7 @@ $default-padding: 14px 12px 6px;
         }
       }
 
-      md-input-container {
+      mat-input-container {
         width: 50%;
         margin-left: 10px;
       }
@@ -90,7 +90,7 @@ $default-padding: 14px 12px 6px;
       autocomplete-input {
         width: 50%;
 
-        md-input-container {
+        mat-input-container {
           width: 100%;
           margin-left: 0;
         }
@@ -232,7 +232,7 @@ $default-padding: 14px 12px 6px;
       padding: 0 20px 20px 20px;
       font-size: 14px;
 
-      md-checkbox {
+      mat-checkbox {
         margin-left: auto;
         color: rgba(0,0,0,0.6);
       }
@@ -324,7 +324,7 @@ $default-padding: 14px 12px 6px;
       }
     }
 
-    md-input-container:first-of-type {
+    mat-input-container:first-of-type {
       margin-right: 20px;
       max-width: 180px;
     }
