--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -24,7 +24,7 @@ associate-dialog {
       width: 100%;
     }
 
-    md-input-container {
+    mat-input-container {
       width: 100%;
     }
   }
