--- a/src/assets/scss/_transaction-view.scss
+++ b/src/assets/scss/_transaction-view.scss
@@ -70,7 +70,7 @@ $card-title-color: #5B9BE1;
         }
       }
 
-      md-input-container {
+      mat-input-container {
         margin: 0;
         width: 100px;
         color: rgba(0, 0, 0, 0.5);
@@ -80,7 +80,7 @@ $card-title-color: #5B9BE1;
         }
       }
 
-      md-checkbox {
+      mat-checkbox {
         margin-left: 50px;
         font-size: 12px;
         color: rgba(0, 0, 0, 0.5);
